src/objects/SomDig_WtAgBeziehung__c.object
<CustomObject>
    <description>Junction-Objekt um Account-Beziehungen darstellen zu können, an denen Datensätze verknüpft werden wie Prognosen, Umsätze etc. (siehe auch Kundenvorgang 995 für eine detaillierte Beschreibung bzw. Anforderung).</description>
    <fields>
        <fullName>P7S1_GroupedId__c</fullName>
        <externalId>true</externalId>
        <label>Grouped ID</label>
        <length>38</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_AbweichungCommitmentPrognoseImAJ__c</fullName>
        <description>Wie groß ist die Abweichung zur Prognose für AJ?</description>
        <formula>SomDig_CommitmentGesamtAJ__c - SomDig_PrognoseGesamtAj__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Wie groß ist die Abweichung zur Prognose für das AJ?</inlineHelpText>
        <label>Abweichung Commitment vs. Prognose im AJ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomDig_AbweichungCommitmentVsPrognoseAJp__c</fullName>
        <description>Differenz zw. Commitment und Prognose für das akt. Jahr in %</description>
        <formula>SomDig_AbweichungCommitmentPrognoseImAJ__c / SomDig_CommitmentGesamtAJ__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Differenz zw. Commitment und Prognose für das akt. Jahr in %</inlineHelpText>
        <label>Abweichung Commitment vs Prognose AJ (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomDig_AbweichungPrognoseAJvsUmsatzVJ__c</fullName>
        <description>Zeigt die absolute Differenz zwischen Prognose AJ zu Umsatz VJ an.</description>
        <formula>SomDig_PrognoseGesamtAj__c - SomDig_UmsatzGesamtVj__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Zeigt die absolute Differenz zwischen Prognose AJ zu Umsatz VJ an.</inlineHelpText>
        <label>Abweichung Prognose AJ vs. Umsatz VJ</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomDig_AbweichungUmsatzAJvsCommitment__c</fullName>
        <description>Zeigt die absolute Differenz zwischen Umsatz AJ zu Commitment an.</description>
        <formula>SomDig_UmsatzGesamtAj__c - SomDig_CommitmentGesamtAJ__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Zeigt die absolute Differenz zwischen Umsatz AJ zu Commitment an.</inlineHelpText>
        <label>Abweichung Umsatz AJ vs. Commitment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomDig_AbweichungUmsatzAJvsPrognoseAJ__c</fullName>
        <description>Zeigt die absolute Differenz zwischen Umsatz AJ zu Prognose AJ an.</description>
        <formula>SomDig_UmsatzGesamtAj__c - SomDig_PrognoseGesamtAj__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Zeigt die absolute Differenz zwischen Umsatz AJ zu Prognose AJ an.</inlineHelpText>
        <label>Abweichung Umsatz AJ vs. Prognose AJ</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomDig_AbweichungUmsatzQ1AJ_v_PrognoseQ1__c</fullName>
        <description>Zeigt die absolute Differenz zwischen Umsatz Q1 AJ zu Prognose Q1 AJ an.</description>
        <formula>SomDig_UmsatzQ1Aj__c -  SomDig_PrognoseQ1Aj__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Zeigt die absolute Differenz zwischen Umsatz Q1 AJ zu Prognose Q1 AJ an.</inlineHelpText>
        <label>Abweichung Umsatz Q1 AJ vs. Prognose Q1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomDig_AbweichungUmsatzQ2AJ_v_PrognoseQ2__c</fullName>
        <description>Zeigt die absolute Differenz zwischen Umsatz Q2 AJ zu Prognose Q2 AJ an.</description>
        <formula>SomDig_UmsatzQ2Aj__c -  SomDig_PrognoseQ2Aj__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Zeigt die absolute Differenz zwischen Umsatz Q2 AJ zu Prognose Q2 AJ an.</inlineHelpText>
        <label>Abweichung Umsatz Q2 AJ vs. Prognose Q2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomDig_AbweichungUmsatzQ3AJ_v_PrognoseQ3__c</fullName>
        <description>Zeigt die absolute Differenz zwischen Umsatz Q3 AJ zu Prognose Q3 AJ an.</description>
        <formula>SomDig_UmsatzQ3Aj__c -  SomDig_PrognoseQ3Aj__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Zeigt die absolute Differenz zwischen Umsatz Q3 AJ zu Prognose Q3 AJ an.</inlineHelpText>
        <label>Abweichung Umsatz Q3 AJ vs. Prognose Q3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomDig_AgenturId__c</fullName>
        <formula>SomDig_Agentur__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agentur Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_AgenturKonzernmutter__c</fullName>
        <description>Gibt automatisch die Konzernmutter der hinterlegten Agentur wieder. Ist ein Formelfeld und  muss daher nicht manuell befüllt werden.</description>
        <formula>SomDig_Agentur__r.Konzernmutter__c</formula>
        <inlineHelpText>Gibt automatisch die Konzernmutter der hinterlegten Agentur wieder. Ist ein Formelfeld und  muss daher nicht manuell befüllt werden.</inlineHelpText>
        <label>Agentur Konzernmutter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_Agentur__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Hinterlegung des Agentur-Accounts in der Beziehung. 
Hinweis: Bei Direktbucher wird dieses Feld leer gelassen!</description>
        <inlineHelpText>Hinterlegung des Agentur-Accounts in der Beziehung. 
Hinweis: Bei Direktbucher wird dieses Feld leer gelassen!</inlineHelpText>
        <label>Agentur</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Id</field>
                <operation>equals</operation>
                <value>012D0000000QgmP</value>
            </filterItems>
            <infoMessage>Datensatztyp des ausgewählten Accounts muss &quot;Agentur&quot; sein, was aktuell nicht der Fall ist. Daher bitte am Account den Datensatztyp vorher noch ändern.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>WT AG Beziehungen (Agentur)</relationshipLabel>
        <relationshipName>AG_Beziehungen</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomDig_BeziehungAccountnameHelp__c</fullName>
        <description>Werbetreibender- und Agenturname, durch ein Underscore getrennt. Wird per Formel automatisch befüllt und dient als Hilfefeld zur Befüllung des Textfeldes &quot;Beziehung Accountname&quot;. Hiernach kann nämlich in Nachschlagebeziehungen nicht gesucht werden.</description>
        <formula>SomDig_Werbetreibender__r.Name &amp; &quot;_&quot; &amp; SomDig_Agentur__r.Name</formula>
        <inlineHelpText>Werbetreibender- und Agenturname, durch ein Underscore getrennt. Wird per Formel automatisch befüllt</inlineHelpText>
        <label>Beziehung Accountname</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_BeziehungAccountname__c</fullName>
        <description>Werbetreibender- und Agenturname, durch ein Underscore getrennt. Wird per Workflow/Feldaktualisierung automatisch befüllt (aus Formelfeld &quot;Beziehung Accountname help&quot;) um hiernach in Nachschlagebeziehungen suchen zu können</description>
        <externalId>true</externalId>
        <inlineHelpText>Werbetreibender- und Agenturname, durch ein Underscore getrennt. Wird per Workflow/Feldaktualisierung automatisch befüllt</inlineHelpText>
        <label>Beziehung Accountname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_BeziehungAccountnumber__c</fullName>
        <description>ProRex ID des Werbetreibenden und der Agentur, durch ein Underscore getrennt (reines Infofeld)</description>
        <formula>SomDig_Werbetreibender__r.AccountNumber &amp; &quot;_&quot; &amp; SomDig_Agentur__r.AccountNumber</formula>
        <inlineHelpText>ProRex ID des Werbetreibenden und der Agentur, durch ein Underscore getrennt (reines Infofeld, wird automatisch vom System befüllt)</inlineHelpText>
        <label>Beziehung Accountnummer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_BeziehungInhaberVertriebsteam__c</fullName>
        <description>In welchem Vertriebsteam ist der Inhaber der WT AG Beziehung? Wird automatisch per Formel gesetzt</description>
        <formula>TEXT( SomDig_BeziehungInhaber__r.SomDig_SalesTeam__c )</formula>
        <inlineHelpText>In welchem Vertriebsteam ist der Inhaber der WT AG Beziehung? Wird automatisch per Formel gesetzt</inlineHelpText>
        <label>Beziehung Inhaber Vertriebsteam</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_BeziehungInhaber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>In der Regel der Inhaber/Betreuer des Werbetreibenders, ist aber manuell Auswählbar und kann daher individuell eingestellt werden</description>
        <inlineHelpText>In der Regel der Inhaber/Betreuer des Werbetreibenders, ist aber manuell Auswählbar und kann daher individuell eingestellt werden</inlineHelpText>
        <label>Beziehung Inhaber</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Id</field>
                <operation>equals</operation>
                <value>00e20000001QBtU</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>WT_AG_Beziehungen</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomDig_CommitmentGesamtAJ__c</fullName>
        <description>errechnet den Wert anhand der aktuellen Commitments.
Verwendet RollupHelper!</description>
        <inlineHelpText>errechnet den Wert anhand der aktuellen Commitments (nur Commitments im Status &apos;angenommen&apos; und &apos;Gentlemen&apos;s Agreement&apos; berücksichtigt)</inlineHelpText>
        <label>Commitment gesamt AJ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomDig_Direktbucher__c</fullName>
        <description>Kontrolle, ob es sich in der Beziehung um einen Direktbucher handelt (entweder ist AG-Feld leer oder WT ist gleich im AG-Feld eingetragen).</description>
        <formula>OR( SomDig_Agentur__c = &quot;&quot; , SomDig_Agentur__c =  SomDig_Werbetreibender__c )</formula>
        <inlineHelpText>Kontrolle, ob es sich in der Beziehung um einen Direktbucher handelt (entweder ist AG-Feld leer oder WT ist gleich im AG-Feld eingetragen). Wird automatisch befüllt.</inlineHelpText>
        <label>Direktbucher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_PrognoseGesamtAj__c</fullName>
        <description>Gesamtsumme der Progonsen für die Beziehung im aktuellen Geschäftsjahr</description>
        <formula>SomDig_PrognoseQ1Aj__c +  
SomDig_PrognoseQ2Aj__c + 
SomDig_PrognoseQ3Aj__c + 
SomDig_PrognoseQ4Aj__c</formula>
        <inlineHelpText>Gesamtsumme der Progonsen für die Beziehung im aktuellen Geschäftsjahr</inlineHelpText>
        <label>Prognose gesamt AJ</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomDig_PrognoseMedDiffInPage__c</fullName>
        <description>Summe aller InPage-Werte der Beziehungen aus dem aktuellen Geschäftsjahr.</description>
        <inlineHelpText>Summe aller InPage-Werte der Beziehungen aus dem aktuellen Geschäftsjahr.</inlineHelpText>
        <label>Prognose InPage AJ</label>
        <summarizedField>SomDig_Prognose__c.SomDig_MedDiffInPage__c</summarizedField>
        <summaryFilterItems>
            <field>SomDig_Prognose__c.SomDig_RelativesJahr__c</field>
            <operation>equals</operation>
            <value>AJ</value>
        </summaryFilterItems>
        <summaryForeignKey>SomDig_Prognose__c.SomDig_WtAgBeziehung__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SomDig_PrognoseMedDiffInStream__c</fullName>
        <description>Summe aller InStream-Werte der Beziehungen aus dem aktuellen Geschäftsjahr.</description>
        <inlineHelpText>Summe aller InStream-Werte der Beziehungen aus dem aktuellen Geschäftsjahr.</inlineHelpText>
        <label>Prognose InStream AJ</label>
        <summarizedField>SomDig_Prognose__c.SomDig_MedDiffInStream__c</summarizedField>
        <summaryFilterItems>
            <field>SomDig_Prognose__c.SomDig_RelativesJahr__c</field>
            <operation>equals</operation>
            <value>AJ</value>
        </summaryFilterItems>
        <summaryForeignKey>SomDig_Prognose__c.SomDig_WtAgBeziehung__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SomDig_PrognoseMedDiffRest__c</fullName>
        <description>Summe aller Digital TV (inkl. Mediaaufwand)-Werte der Beziehungen aus dem aktuellen Geschäftsjahr.</description>
        <inlineHelpText>Summe aller Digital TV (inkl. Mediaaufwand)-Werte der Beziehungen aus dem aktuellen Geschäftsjahr.</inlineHelpText>
        <label>Prognose DigitalTV (inkl. Mediaauf.)  AJ</label>
        <summarizedField>SomDig_Prognose__c.SomDig_MedDiffRest__c</summarizedField>
        <summaryFilterItems>
            <field>SomDig_Prognose__c.SomDig_RelativesJahr__c</field>
            <operation>equals</operation>
            <value>AJ</value>
        </summaryFilterItems>
        <summaryForeignKey>SomDig_Prognose__c.SomDig_WtAgBeziehung__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SomDig_PrognoseQ1Aj__c</fullName>
        <description>RollUp aller betroffenen Q1-Werte der Beziehungen aus dem aktuellen Geschäftsjahr (braucht zum Jahreswechsel nicht angepasst werden, funzt dynamisch)</description>
        <inlineHelpText>RollUp aller betroffenen Q1-Werte der Beziehungen aus dem aktuellen Geschäftsjahr</inlineHelpText>
        <label>Prognose Q1 AJ</label>
        <summarizedField>SomDig_Prognose__c.SomDig_PrognoseQ1__c</summarizedField>
        <summaryFilterItems>
            <field>SomDig_Prognose__c.SomDig_RelativesJahr__c</field>
            <operation>equals</operation>
            <value>AJ</value>
        </summaryFilterItems>
        <summaryForeignKey>SomDig_Prognose__c.SomDig_WtAgBeziehung__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SomDig_PrognoseQ2Aj__c</fullName>
        <description>RollUp aller betroffenen Q2-Werte der Beziehungen aus dem aktuellen Geschäftsjahr (braucht zum Jahreswechsel nicht angepasst werden, funzt dynamisch)</description>
        <inlineHelpText>RollUp aller betroffenen Q2-Werte der Beziehungen aus dem aktuellen Geschäftsjahr</inlineHelpText>
        <label>Prognose Q2 AJ</label>
        <summarizedField>SomDig_Prognose__c.SomDig_PrognoseQ2__c</summarizedField>
        <summaryFilterItems>
            <field>SomDig_Prognose__c.SomDig_RelativesJahr__c</field>
            <operation>equals</operation>
            <value>AJ</value>
        </summaryFilterItems>
        <summaryForeignKey>SomDig_Prognose__c.SomDig_WtAgBeziehung__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SomDig_PrognoseQ3Aj__c</fullName>
        <description>RollUp aller betroffenen Q3-Werte der Beziehungen aus dem aktuellen Geschäftsjahr (braucht zum Jahreswechsel nicht angepasst werden, funzt dynamisch)</description>
        <inlineHelpText>RollUp aller betroffenen Q3-Werte der Beziehungen aus dem aktuellen Geschäftsjahr</inlineHelpText>
        <label>Prognose Q3 AJ</label>
        <summarizedField>SomDig_Prognose__c.SomDig_PrognoseQ3__c</summarizedField>
        <summaryFilterItems>
            <field>SomDig_Prognose__c.SomDig_RelativesJahr__c</field>
            <operation>equals</operation>
            <value>AJ</value>
        </summaryFilterItems>
        <summaryForeignKey>SomDig_Prognose__c.SomDig_WtAgBeziehung__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SomDig_UmsatzGesamtAj__c</fullName>
        <description>Gesamtsumme des Umsatzes für die Beziehung im aktuellen Geschäftsjahr, Mediagattung Digital</description>
        <formula>SomDig_UmsatzQ1Aj__c +  SomDig_UmsatzQ2Aj__c +  SomDig_UmsatzQ3Aj__c +  SomDig_UmsatzQ4Aj__c</formula>
        <inlineHelpText>Gesamtsumme des Umsatzes für die Beziehung im aktuellen Geschäftsjahr, Mediagattung Digital aber ohne Mediagattungs-Segment &quot;NonMedia&quot; und somit z.B. ohne Dienstleistung.</inlineHelpText>
        <label>Umsatz gesamt AJ</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomDig_UmsatzGesamtVj__c</fullName>
        <description>Gesamtsumme des Umsatzes für die Beziehung aus vorherigem Geschäftsjahr, Mediagattung Digital</description>
        <inlineHelpText>Gesamtsumme des Umsatzes für die Beziehung aus vorherigem Geschäftsjahr, Mediagattung Digital aber ohne Mediagattungs-Segment &quot;NonMedia&quot; und somit z.B. ohne Dienstleistung.</inlineHelpText>
        <label>Umsatz gesamt VJ</label>
        <summarizedField>SomDig_Umsatz__c.SomDig_Mn2__c</summarizedField>
        <summaryFilterItems>
            <field>SomDig_Umsatz__c.SomDig_MediagattungsName__c</field>
            <operation>equals</operation>
            <value>Digital</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SomDig_Umsatz__c.SomDig_RelativesJahr__c</field>
            <operation>equals</operation>
            <value>VJ</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SomDig_Umsatz__c.SomDig_MediagattungsSegmentName__c</field>
            <operation>notEqual</operation>
            <value>NonMedia</value>
        </summaryFilterItems>
        <summaryForeignKey>SomDig_Umsatz__c.SomDig_WtAgBeziehung__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SomDig_UmsatzMedDiffInPageVJ__c</fullName>
        <description>Summe aller InPage-Werte der Beziehungen aus dem vorherigen Geschäftsjahr.</description>
        <inlineHelpText>Summe aller InPage-Werte der Beziehungen aus dem vorherigen Geschäftsjahr.</inlineHelpText>
        <label>Umsatz InPage VJ</label>
        <summarizedField>SomDig_Umsatz__c.SomDig_Mn2__c</summarizedField>
        <summaryFilterItems>
            <field>SomDig_Umsatz__c.SomDig_RelativesJahr__c</field>
            <operation>equals</operation>
            <value>VJ</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SomDig_Umsatz__c.SomDig_MediagattungsDifferenzierungsName__c</field>
            <operation>equals</operation>
            <value>InPage/Display</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SomDig_Umsatz__c.SomDig_MediagattungsName__c</field>
            <operation>equals</operation>
            <value>Digital</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SomDig_Umsatz__c.SomDig_MediagattungsSegmentName__c</field>
            <operation>notEqual</operation>
            <value>NonMedia</value>
        </summaryFilterItems>
        <summaryForeignKey>SomDig_Umsatz__c.SomDig_WtAgBeziehung__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SomDig_UmsatzMedDiffInPage__c</fullName>
        <description>Summe aller InPage-Werte der Beziehungen aus dem aktuellen Geschäftsjahr.</description>
        <inlineHelpText>Summe aller InPage-Werte der Beziehungen aus dem aktuellen Geschäftsjahr.</inlineHelpText>
        <label>Umsatz InPage AJ</label>
        <summarizedField>SomDig_Umsatz__c.SomDig_Mn2__c</summarizedField>
        <summaryFilterItems>
            <field>SomDig_Umsatz__c.SomDig_RelativesJahr__c</field>
            <operation>equals</operation>
            <value>AJ</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SomDig_Umsatz__c.SomDig_MediagattungsDifferenzierungsName__c</field>
            <operation>equals</operation>
            <value>InPage/Display</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SomDig_Umsatz__c.SomDig_MediagattungsName__c</field>
            <operation>equals</operation>
            <value>Digital</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SomDig_Umsatz__c.SomDig_MediagattungsSegmentName__c</field>
            <operation>notEqual</operation>
            <value>NonMedia</value>
        </summaryFilterItems>
        <summaryForeignKey>SomDig_Umsatz__c.SomDig_WtAgBeziehung__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SomDig_UmsatzMedDiffInStreamVJ__c</fullName>
        <description>Summe aller InStream-Werte der Beziehungen aus des vorherigen Geschäftsjahr.</description>
        <inlineHelpText>Summe aller InStream-Werte der Beziehungen aus des vorherigen Geschäftsjahr.</inlineHelpText>
        <label>Umsatz InStream VJ</label>
        <summarizedField>SomDig_Umsatz__c.SomDig_Mn2__c</summarizedField>
        <summaryFilterItems>
            <field>SomDig_Umsatz__c.SomDig_RelativesJahr__c</field>
            <operation>equals</operation>
            <value>VJ</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SomDig_Umsatz__c.SomDig_MediagattungsDifferenzierungsName__c</field>
            <operation>equals</operation>
            <value>InStream/Video</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SomDig_Umsatz__c.SomDig_MediagattungsName__c</field>
            <operation>equals</operation>
            <value>Digital</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SomDig_Umsatz__c.SomDig_MediagattungsSegmentName__c</field>
            <operation>notEqual</operation>
            <value>NonMedia</value>
        </summaryFilterItems>
        <summaryForeignKey>SomDig_Umsatz__c.SomDig_WtAgBeziehung__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SomDig_UmsatzMedDiffInStream__c</fullName>
        <description>Summe aller InStream-Werte der Beziehungen aus dem aktuellen Geschäftsjahr.</description>
        <inlineHelpText>Summe aller InStream-Werte der Beziehungen aus dem aktuellen Geschäftsjahr.</inlineHelpText>
        <label>Umsatz InStream AJ</label>
        <summarizedField>SomDig_Umsatz__c.SomDig_Mn2__c</summarizedField>
        <summaryFilterItems>
            <field>SomDig_Umsatz__c.SomDig_RelativesJahr__c</field>
            <operation>equals</operation>
            <value>AJ</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SomDig_Umsatz__c.SomDig_MediagattungsDifferenzierungsName__c</field>
            <operation>equals</operation>
            <value>InStream/Video</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SomDig_Umsatz__c.SomDig_MediagattungsName__c</field>
            <operation>equals</operation>
            <value>Digital</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SomDig_Umsatz__c.SomDig_MediagattungsSegmentName__c</field>
            <operation>notEqual</operation>
            <value>NonMedia</value>
        </summaryFilterItems>
        <summaryForeignKey>SomDig_Umsatz__c.SomDig_WtAgBeziehung__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SomDig_UmsatzMedDiffRestVJ__c</fullName>
        <description>Summe aller Digital TV (inkl. Mediaaufwand)-Werte der Beziehungen aus dem vorherigen Geschäftsjahr.</description>
        <inlineHelpText>Summe aller Digital TV (inkl. Mediaaufwand)-Werte der Beziehungen aus dem vorherigen Geschäftsjahr.</inlineHelpText>
        <label>Umsatz DigitalTV (inkl. Mediaaufwand) VJ</label>
        <summarizedField>SomDig_Umsatz__c.SomDig_Mn2__c</summarizedField>
        <summaryFilterItems>
            <field>SomDig_Umsatz__c.SomDig_RelativesJahr__c</field>
            <operation>equals</operation>
            <value>VJ</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SomDig_Umsatz__c.SomDig_MediagattungsDifferenzierungsName__c</field>
            <operation>equals</operation>
            <value>Digital TV, Mediaaufwand</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SomDig_Umsatz__c.SomDig_MediagattungsName__c</field>
            <operation>equals</operation>
            <value>Digital</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SomDig_Umsatz__c.SomDig_MediagattungsSegmentName__c</field>
            <operation>notEqual</operation>
            <value>NonMedia</value>
        </summaryFilterItems>
        <summaryForeignKey>SomDig_Umsatz__c.SomDig_WtAgBeziehung__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SomDig_UmsatzMedDiffRest__c</fullName>
        <description>Summe aller Digital TV (inkl. Mediaaufwand)-Werte der Beziehungen aus dem aktuellen Geschäftsjahr.</description>
        <inlineHelpText>Summe aller Digital TV (inkl. Mediaaufwand)-Werte der Beziehungen aus dem aktuellen Geschäftsjahr.</inlineHelpText>
        <label>Umsatz DigitalTV (inkl. Mediaaufwand) AJ</label>
        <summarizedField>SomDig_Umsatz__c.SomDig_Mn2__c</summarizedField>
        <summaryFilterItems>
            <field>SomDig_Umsatz__c.SomDig_RelativesJahr__c</field>
            <operation>equals</operation>
            <value>AJ</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SomDig_Umsatz__c.SomDig_MediagattungsDifferenzierungsName__c</field>
            <operation>equals</operation>
            <value>Digital TV, Mediaaufwand</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SomDig_Umsatz__c.SomDig_MediagattungsName__c</field>
            <operation>equals</operation>
            <value>Digital</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SomDig_Umsatz__c.SomDig_MediagattungsSegmentName__c</field>
            <operation>notEqual</operation>
            <value>NonMedia</value>
        </summaryFilterItems>
        <summaryForeignKey>SomDig_Umsatz__c.SomDig_WtAgBeziehung__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SomDig_UmsatzQ1Aj__c</fullName>
        <description>RollUp aller betroffenen Q1-Werte der Beziehungen aus dem aktuellen Geschäftsjahr und Mediagattung Digital (braucht zum Jahreswechsel nicht angepasst werden, funzt dynamisch)</description>
        <inlineHelpText>RollUp aller betroffenen Q1-Werte der Beziehungen aus dem aktuellen Geschäftsjahr und Mediagattung Digital OHNE Mediagattungs-Segment &quot;NonMedia&quot; und somit z.B. Dienstleistung.</inlineHelpText>
        <label>Umsatz Q1 AJ</label>
        <summarizedField>SomDig_Umsatz__c.SomDig_Mn2__c</summarizedField>
        <summaryFilterItems>
            <field>SomDig_Umsatz__c.SomDig_MediagattungsName__c</field>
            <operation>equals</operation>
            <value>Digital</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SomDig_Umsatz__c.SomDig_RelativesJahr__c</field>
            <operation>equals</operation>
            <value>AJ</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SomDig_Umsatz__c.SomDig_Quartal__c</field>
            <operation>equals</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SomDig_Umsatz__c.SomDig_MediagattungsSegmentName__c</field>
            <operation>notEqual</operation>
            <value>NonMedia</value>
        </summaryFilterItems>
        <summaryForeignKey>SomDig_Umsatz__c.SomDig_WtAgBeziehung__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SomDig_UmsatzQ2Aj__c</fullName>
        <description>RollUp aller betroffenen Q2-Werte der Beziehungen aus dem aktuellen Geschäftsjahr (braucht zum Jahreswechsel nicht angepasst werden, funzt dynamisch)</description>
        <inlineHelpText>RollUp aller betroffenen Q2-Werte der Beziehungen aus dem aktuellen Geschäftsjahr und Mediagattung Digital OHNE Mediagattungs-Segment &quot;NonMedia&quot; und somit z.B. Dienstleistung.</inlineHelpText>
        <label>Umsatz Q2 AJ</label>
        <summarizedField>SomDig_Umsatz__c.SomDig_Mn2__c</summarizedField>
        <summaryFilterItems>
            <field>SomDig_Umsatz__c.SomDig_MediagattungsName__c</field>
            <operation>equals</operation>
            <value>Digital</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SomDig_Umsatz__c.SomDig_Quartal__c</field>
            <operation>equals</operation>
            <value>2</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SomDig_Umsatz__c.SomDig_RelativesJahr__c</field>
            <operation>equals</operation>
            <value>AJ</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SomDig_Umsatz__c.SomDig_MediagattungsSegmentName__c</field>
            <operation>notEqual</operation>
            <value>NonMedia</value>
        </summaryFilterItems>
        <summaryForeignKey>SomDig_Umsatz__c.SomDig_WtAgBeziehung__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SomDig_UmsatzQ3Aj__c</fullName>
        <description>RollUp aller betroffenen Q3-Werte der Beziehungen aus dem aktuellen Geschäftsjahr (braucht zum Jahreswechsel nicht angepasst werden, funzt dynamisch)</description>
        <inlineHelpText>RollUp aller betroffenen Q3-Werte der Beziehungen aus dem aktuellen Geschäftsjahr und Mediagattung Digital OHNE Mediagattungs-Segment &quot;NonMedia&quot; und somit z.B. Dienstleistung.</inlineHelpText>
        <label>Umsatz Q3 AJ</label>
        <summarizedField>SomDig_Umsatz__c.SomDig_Mn2__c</summarizedField>
        <summaryFilterItems>
            <field>SomDig_Umsatz__c.SomDig_MediagattungsName__c</field>
            <operation>equals</operation>
            <value>Digital</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SomDig_Umsatz__c.SomDig_RelativesJahr__c</field>
            <operation>equals</operation>
            <value>AJ</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SomDig_Umsatz__c.SomDig_Quartal__c</field>
            <operation>equals</operation>
            <value>3</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SomDig_Umsatz__c.SomDig_MediagattungsSegmentName__c</field>
            <operation>notEqual</operation>
            <value>NonMedia</value>
        </summaryFilterItems>
        <summaryForeignKey>SomDig_Umsatz__c.SomDig_WtAgBeziehung__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SomDig_UniqueKey__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Wird per Workflow (Feldaktualisierung) bei Anlage eines Datensatztes WT AG - Beziehung automatisch befüllt, um Dubletten zu vermeiden (Key muss einzigartig sein anhand Salesforce ID - Kombination)</description>
        <inlineHelpText>Wird per Workflow (Feldaktualisierung) bei Anlage eines Datensatztes WT AG - Beziehung automatisch befüllt, um Dubletten zu vermeiden (Key muss einzigartig sein anhand Salesforce ID - Kombination)</inlineHelpText>
        <label>UniqueKey</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SomDig_WerbetreibenderKonzernmutter__c</fullName>
        <description>Gibt automatisch die Konzernmutter des hinterlegten Werbetreibenders wieder. Ist ein Formelfeld und muss daher nicht manuell befüllt werden.</description>
        <formula>SomDig_Werbetreibender__r.Konzernmutter__c</formula>
        <inlineHelpText>Gibt automatisch die Konzernmutter des hinterlegten Werbetreibenders wieder. Ist ein Formelfeld und muss daher nicht manuell befüllt werden.</inlineHelpText>
        <label>Werbetreibender Konzernmutter</label>
        <type>Text</type>
    </fields>
</CustomObject>